Actions
Bug #10670
closedi40e: NULL pointer errors
Start date:
2019-04-02
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
../../common/io/i40e/i40e_osdep.c: In function 'i40e_allocate_dma_mem': ../../common/io/i40e/i40e_osdep.c:100:11: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] mem->pa = NULL; ^ ../../common/io/i40e/i40e_transceiver.c: In function 'i40e_free_dma_buffer': ../../common/io/i40e/i40e_transceiver.c:516:29: error: comparison between pointer and integer [-Werror] if (dmap->dmab_dma_address != NULL) { ^~ ../../common/io/i40e/i40e_transceiver.c:519:26: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] dmap->dmab_dma_address = NULL; ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit ae6f9789e23baaa0d8a3f14c37c068824b33f5e6
commit ae6f9789e23baaa0d8a3f14c37c068824b33f5e6 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-10T06:29:20.000Z 10670 i40e: NULL pointer errors Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions